# asl-gokart

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  devontainer.json  wsl-bundle-for-arm-debug.sh  wsl-bundle-for-arm.sh
.github/: copilot-instructions.md
.github/workflows/: CI.yml  _analytics.yml  _headunit.yml  _pinout-docs.yml  _release.yml  _zc.yml  build-arm-image.yml  ci-analytics.yml  ci-headunit.yml  ci-pinout-docs.yml  ci-release.yml  ci-zc.yml  ci.yml  ci_headunit.yml  ci_sero-node.yml  ci_someip-node.yml
analytics/: .env.example  .gitignore  README.md  docker-compose.yaml  eslint.config.js  package-lock.json  package.json  tsconfig.json
analytics/prisma/: schema.prisma
analytics/src/: env.js
infotainment/: README.md
infotainment/asl-gokart-dashboard/: Dockerfile  autodeploy-on-rpi.sh  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
infotainment/asl-gokart-serial/: README.md  __main__.py
infotainment/headunit/: .gitignore  .npmrc  README.md  autodeploy-on-rpi-2.sh  docker-compose.yaml  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.preload.config.ts
infotainment/sero-node/: binding.gyp  index.js  package.json  package.json.OLD
infotainment/someip-node/: .env.example  .gitattributes  .yarnrc.yml  Cargo.toml  README.md  browser.js  build-and-install.sh  index.d.ts  index.js  package-lock.json  package.json  someip-node.wasi-browser.js  someip-node.wasi.cjs
infotainment/someip-node/.github/workflows/: CI.yml
infotainment/someip-node/src/: lib.rs
tools/someip-lite-poc/: Readme.md  client.py  const.py  server.py
tools/websocket-server/: __main__.py
zc/: README.md
zc/KLSController/: platformio.ini
zc/olimex-prototype/: platformio.ini
zc/rust-poc/throttle-zc/: Cargo.toml  README.md  sdkconfig  sdkconfig.defaults
zc/rust-poc/throttle-zc/.cargo/: config.toml
zc/rust-poc/throttle-zc/docs/: README.md
zc/rust-poc/throttle-zc/scripts/: flash.sh
zc/rust-poc/throttle-zc/src/: eth_setup.rs  kelly_decoder.rs  main.rs  uart.rs
zc/rust-poc/throttle-zc/src/communication/: adapter.rs  mod.rs  protocoll.rs  serializer.rs  ws_client.rs
zc/tools/: gen_pinout_docs.py
zc/zc_battery/: logger-arduino.cpp  partitions.csv  platformio.ini
zc/zc_buttons/: platformio.ini
zc/zc_lights/: platformio.ini
(+264 files in other folders)
