
[package]
authors = ["AEROSPACE-LAB Team Gokart"]
edition = "2021"
name = "someip_node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["async", "tokio_rt", "serde-json"] }
napi-derive = "3.0.0"
protocol = { path = "../../../esp32-protocol/protocol" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
