
[package]
authors = ["AEROSPACE-LAB Team Gokart"]
edition = "2021"
name = "someip_node"
description="This package works as a TypeScript wrapper around esp32-protocol, a simpler implementation of the SOME-IP ethernet communication protocol."
version = "1.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["async", "tokio_rt", "serde-json"] }
napi-derive = "3.0.0"
protocol = { path = "../../../esp32-protocol/protocol" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
