[package]
name = "throttle-zc"
version = "0.1.0"
authors = ["iaxon <jakobgaf@web.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "throttle-zc"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49.1", default-features = false }
esp-idf-sys = { version ="0.35.0" }
mcp4728 = "0.1.0"
anyhow = "1.0.86"
crossbeam-channel = "0.5.13"
serde = "1.0.209"
serde_json = "1.0.127"

[build-dependencies]
embuild = "0.32.0"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.2.3" }
